--- a/members/templates/members/members.html
+++ b/members/templates/members/members.html
@@ -6,11 +6,11 @@
 <h1>Equipo</h1>
 
 <ul>
-    <li><a href="{% url 'member' id=1 %}">Integrante 1</a></li>
-    <li><a href="{% url 'member' id=2 %}">Integrante 2</a></li>
-    <li><a href="{% url 'member' id=3 %}">Integrante 3</a></li>
-    <li><a href="{% url 'member' id=4 %}">Integrante 4</a></li>
-    <li><a href="{% url 'member' id=5 %}">Integrante 5</a></li>
+    <li><a href="{% url 'member_info' id=1 %}">Integrante 1</a></li>
+    <li><a href="{% url 'member_info' id=2 %}">Integrante 2</a></li>
+    <li><a href="{% url 'member_info' id=3 %}">Integrante 3</a></li>
+    <li><a href="{% url 'member_info' id=4 %}">Integrante 4</a></li>
+    <li><a href="{% url 'member_info' id=5 %}">Integrante 5</a></li>
   </ul>
 
 
